# Antiquar

./: .gitignore  Cargo.toml  devenv.nix  devenv.yaml
.zed/: tasks.json
src/: main.rs
ui/: app-window.slint
