[package]
name = "Antiquar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs4 = "0.13.1"
nix = { version = "0.30.1", features = ["fs"] }
regex = "1.11.2"
serde = { version = "1.0.221", features = ["derive"] }
slint = "1.12.1"
toml = "0.9.5"
walkdir = "2.5.0"

[build-dependencies]
slint-build = "1.12.1"
