[package]
name = "Antiquar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs4 = "0.13.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
walkdir = "2.5.0"
gpui = "0.2"
gpui-component = "0.4.0-preview2"
rust-embed = "8.9.0"
